resources/css/app.css
/* ... */
.vehicle-image-wrapper {
  flex: 1;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;;
}

.vehicle-active-image {
  max-width: 100%;
  max-height: 100%;
  object-fit: contain; /* Ensures full image is shown */
  display: block;
  margin: auto;
}

.vehicle-image-thumbnails {
  width: 110px;
  padding: 5px;
  overflow-x: hidden;
  overflow-y: auto;
}

.vehicle-image-thumbnails img {
  width: 100%;
  height: 80px;
  border-radius: 4px;
  object-fit: contain;
  cursor: pointer;
}

.vehicle-image-thumbnails .active-thumbnail {
  outline: 2px solid rgb(54, 145, 197);
}

.carousel-button {
  position: absolute;
  left: 0;
  z-index: 10;
  top: 50%;
  transform: translateY(-50%);
  background-color: rgba(0, 0, 0, 0.5);
  width: 64px;
  height: 64px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  border: none;
  color: white;
  cursor: pointer;
  transition: all 0.3s;
}

.carousel-button:hover {
  background-color: rgba(0, 0, 0, 0.7);
}

.carousel-button.next-button {
  left: auto;
  right: 0;
}

/* width */
.vehicle-image-thumbnails::-webkit-scrollbar {
  width: 4px;
}

/* Track */
.vehicle-image-thumbnails::-webkit-scrollbar-track {
  background: transparent;
}

/* Handle */
.vehicle-image-thumbnails::-webkit-scrollbar-thumb {
  background-color: transparent;
  transition: all 0.3s;
}

.vehicle-image-thumbnails:hover::-webkit-scrollbar-thumb {
  background: #555;
}

/* Handle on hover */
.vehicle-image-thumbnails::-webkit-scrollbar-thumb:hover {
  background: #444;
}

.vehicle-details {
  padding: 1.5rem;
  min-width: 300px;
}

.vehicle-images-and-description {
  flex: 1;
}

.vehicle-details-price {
  font-size: 28px;
  margin: 0;
  font-weight: bolder;
}

.vehicle-details-table {
  width: 100%;
}

.vehicle-details-table th,
.vehicle-details-table td {
  padding: 0.5rem 0.5rem 0.5rem 0;
}

.vehicle-details-table th {
  text-align: left;
  font-weight: 300;
}

.vehicle-details-owner {
  margin: 0;
  margin-bottom: 0.5rem;
}

.vehicle-details-owner-image {
  width: 44px;
}

.vehicle-details-phone {
  position: relative;
  display: flex;
  align-items: center;
  gap: 1rem;
  padding: 1rem;
  font-size: 14px;
  border: 1px solid var(--primary-color);
  border-radius: 1rem;
  text-decoration: none;
  font-weight: bold;
}

.vehicle-details-phone-view {
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  padding: 0.5rem;
  display: inline-block;
  width: 80px;
  font-weight: normal;
  color: var(--text-color);
  transition: all 0.3s;
}

.vehicle-details-phone-view:hover {
  border-top-right-radius: 1rem;
  border-bottom-right-radius: 1rem;
  background-color: rgba(0, 0, 0, 0.1);
}

.vehicle-details-title {
  margin-top: 0;
  margin-bottom: 1rem;
}

.vehicle-detailed-description {
  padding: 1rem;
  margin: 1.5rem 0;
  font-size: 16px;
  line-height: 24px;
}

.vehicle-specifications {
  list-style: none;
  padding: 0;
  margin: 0;
}

.vehicle-specifications > li {
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.vehicle-specifications > li > svg {
  width: 18px;
}

.add-new-vehicle-form .form-content {
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
  padding: 1rem;
}

.add-new-vehicle-form .form-details {
  flex: 1;
}

.form-images {
  width: 280px;
  display: flex;
  flex-direction: column;
  padding-left: 1rem;
  border-left: 1px solid rgb(224, 224, 224);
  align-items: center;
  justify-content: start;
}

.form-image-upload {
  position: relative;
  display: inline-block;
  margin-bottom: 1rem;
}

.form-image-upload .upload-placeholder {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  width: 100px;
  height: 100px;
  border-radius: 10px;
  border: 1px dotted var(--text-muted-color);
  color: var(--text-muted-color);
  cursor: pointer;
}

.form-image-upload input[type="file"] {
  position: absolute;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  opacity: 0;
  cursor: pointer;
}

.vehicle-form-images {
  display: flex;
  gap: 0.25rem;
  flex-wrap: wrap;
  justify-content: start;
}

.vehicle-form-image-preview {
  position: relative;
}

.vehicle-form-image-preview .delete-icon {
  position: absolute;
  right: 0.125rem;
  top: 0.125rem;
  width: 22px;
  height: 22px;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
  color: white;
  background-color: rgba(0, 0, 0, 0.5);
  cursor: pointer;
  opacity: 0;
  transition: all 0.3s;
}

.vehicle-form-image-preview:hover .delete-icon {
  opacity: 1;
}

.vehicle-form-image-preview .delete-icon:hover {
  background-color: rgba(0, 0, 0, 0.7);
}

.vehicle-form-image-preview img {
  width: 80px;
  height: 80px;
  max-width: 100%;
  border-radius: 10px;
  object-fit: cover;
  border-radius: 10px;
}

.page-my-vehicles .btn-edit,
.page-my-vehicles .btn-delete {
  padding: 0.25rem 0.5rem;
  background-color: transparent;
}

.page-my-vehicles .btn-edit:hover,
.page-my-vehicles .btn-delete:hover {
  background-color: rgba(0, 0, 0, 0.05);
}

.page-my-vehicles .btn-edit {
  color: #448eef;
}

.page-my-vehicles .btn-delete {
  color: #f16060;
}

.my-vehicles-img-thumbnail {
  width: 60px;
  border-radius: 6px;
}

.auth-page-title {
  text-align: center;
}

.auth-page-password-reset {
  font-size: 16px;
}

.page-login a {
  text-decoration: none;
}

.page-login .btn-login {
  border-radius: 50px;
  font-size: 20px;
}

.page-login .social-auth-buttons {
  margin-top: 1rem;
}

.page-login .social-auth-buttons .btn {
  font-size: 16px;
}

.login-text-dont-have-account {
  margin-top: 2rem;
  text-align: center;
  font-size: 14px;
}

.auth-page-form,
.auth-page-image {
  flex: 1;
}

.auth-page-image {
  display: flex;
  align-items: center;
  justify-content: end;
}

.show-filters-button {
  margin-right: 1rem;
  display: none;
  cursor: pointer;
}
/* ... */

